pulling download bar

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -16,13 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>{{ site.maintitle }}</h1>
-        <h3>{{ site.subtitle }}</h3>
-
-        <ul>
-          <li><a href="https://github.com/{{ site.account }}/{{ site.repo }}/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/{{ site.account }}/{{ site.repo }}/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/{{ site.account }}/{{ site.repo }}">View On <strong>GitHub</strong></a></li>
-        </ul>
+        <p>{{ site.subtitle }}</p>
         
 	<p></p>
         <a href="{{ site.baseurl }}/{{ site.repo }}">Home</a><br>
