--- a/_layouts/bare.html
+++ b/_layouts/bare.html
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>{{ site.maintitle }}</h1>
-        <h3>{{ site.subtitle }}</h3>
+        <h1>{{ site.title }}</h1>
+        <p>{{ site.subtitle }}</p>
       </header>
       <section> 
         <h1>{{ page.title }}</h1>
