--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{{ site.maintitle }} by {{ site.account }}</title>
+    <title>{{ site.title }}</title>
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/styles.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}stylesheets/styles.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -15,24 +15,27 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>{{ site.maintitle }}</h1>
+        <h1>{{ site.title }}</h1>
         <p>{{ site.subtitle }}</p>
-        
-	<p>Visit {{ site.maintitle }} on <a href="http://github.com/{{ site.account }}/{{ site.repo }}">github</a></p>
 
-        <a href="{{ site.baseurl }}/{{ site.repo }}">Home</a><br>
-        <a href="{{ site.baseurl }}/{{ site.repo }}/publications">Publications</a><br>
-        <a href="{{ site.baseurl }}/{{ site.repo }}/documentation">Documentation</a><br>
-        <a href="{{ site.baseurl }}/{{ site.repo }}/software">Software</a><br>
-        <a href="{{ site.baseurl }}/{{ site.repo }}/administration">Administration</a>
+	<ul>
+    	{% for post in site.categories.blog limit:10 %}
+    	<li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+    	{% endfor %}
+    	</ul>
+
+        <a href="{{ site.baseurl }}">Home</a><br>
+        <a href="{{ site.baseurl }}publications.html">Publications</a><br>
+        <a href="{{ site.baseurl }}documentation.html">Documentation</a><br>
+        <a href="{{ site.baseurl }}software.html">Software</a><br>
+        <a href="{{ site.baseurl }}blog.html">Blog</a><br>
 
       </header>
       <section>
       {{ content }}
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/{{ site.account }}">{{ site.account }}</a></p>
-        <p><small>Hosted on GitHub Pages <br> Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        {% include footer.html %}
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
