updating to current template

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,3 @@
+<p>Visit {{ site.title }} on <a href="{{ site.github }}">GitHub</a></p>
 <p>Maintained by <a href="https://github.com/palexand">Perry Alexander</a></p>
 <p><small>Hosted on GitHub Pages </br> Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
