fixing broken links

--- a/_includes/releases.html
+++ b/_includes/releases.html
@@ -11,4 +11,4 @@ No current software relases.
 {% endfor %}
 
 
-Visit {{ site.title }} on [github](http://github.com/{{ site.account }}/{{ site.repo }})
+Visit {{ site.title }} on [github]({{ site.github }})
